--- a/static/index.html
+++ b/static/index.html
@@ -224,6 +224,29 @@
                     </ul>
                 </li>
 
+                <li class="treeview">
+                    <a href="#">
+                        <div class="ion ion-help-buoy",></div>
+                        <span>Documentation</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-right pull-left"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="#" data-href="/static/faq.html">
+                                <i class="fa fa-circle-o"></i>
+                                F.A.Q.
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" data-href="/static/developers.html">
+                                <i class="fa fa-circle-o"></i>
+                                Developers
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </section>
         <!-- /.sidebar -->
