--- a/static/usergroups.html
+++ b/static/usergroups.html
@@ -21,7 +21,7 @@
                     </h4>
                 </div>
                 </a>
-                <div id="table-general-information-collapse" class="panel-collapse collapse collapsed">
+                <div id="table-general-information-collapse" class="panel-collapse collapse collapsed in">
                 <div class="box-body">
                     <p>
                         In this section you would be able to perform a few actions related to usergroups.
@@ -104,7 +104,7 @@
                     </h4>
                 </div>
                 </a>
-                <div id="table-your-usergroups-collapse" class="panel-collapse collapse collapsed">
+                <div id="table-your-usergroups-collapse" class="panel-collapse collapse collapsed in">
                 <div class="box-body">
                     <p>
                         Below are the usergroups that you are a member of. If you are an administrator
