Fixed user remaining in group after account deletion.

--- a/static/profile.html
+++ b/static/profile.html
@@ -16,7 +16,7 @@
             <!-- Profile Image -->
             <div class="box box-primary">
                 <div class="box-body box-profile">
-                    <img class="profile-user-img img-responsive img-circle" src="/user_avatar/${current_user.handle}" alt="User profile picture">
+                    <img class="profile-user-img img-responsive img-circle" src="/user_avatar/${this_user.handle}" alt="User profile picture">
                     <h3 class="profile-username text-center">${this_user.usr_name}</h3>
                     <p class="text-muted text-center"><b>bzShare</b> User</p>
                     <ul class="list-group list-group-unbordered">
