Fixed guests cannot edit profile without adding passwords.

--- a/static/index.html
+++ b/static/index.html
@@ -93,7 +93,7 @@
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                    <a class="btn btn-default btn-flat" href="#" data-href="/settings/profile/${current_user.handle}">Profile</a>
                                 </div>
                                 <div class="pull-right">
                                     % if login_status == True:
