--- a/static/profile.html
+++ b/static/profile.html
@@ -84,13 +84,7 @@
                             <div class="form-group">
                                 <label for="inputPassword" class="col-sm-2 control-label">Password</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" ${'disabled="disabled"' if not this_user_editable else ''} id="inputPassword" name="password" placeholder="Password" value="${this_user.password}">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPasswordRecheck" class="col-sm-2 control-label">Retype Password</label>
-                                <div class="col-sm-10">
-                                    <input type="password" class="form-control" ${'disabled="disabled"' if not this_user_editable else ''} id="inputPasswordRecheck" name="password-recheck" placeholder="Retype Password" value="${this_user.password}">
+                                    <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" value="">
                                 </div>
                             </div>
                             % endif
@@ -126,6 +120,7 @@
 </section>
 <!-- /.content -->
 
+<script src="/static/plugins/jssha/sha512.js"></script>
 <script>
 $('#account-avatar-upload-button').click(function(event) {
     event.preventDefault();
@@ -181,6 +176,8 @@ var bzsSettingsUpdateProfile = function(event) {
         form_data[form_source[i]['name']] = form_source[i]['value'];
     // Done sorting data, proceeding to upload
     bzsDialogLoadingLoad();
+    // This is to ensure the security
+    form_data['password'] = hex_sha512(form_data['password']);
     $.ajax({
         method: "POST",
         url: "/settings/profile_edit/${this_user.handle}",
