--- a/static/signup.html
+++ b/static/signup.html
@@ -14,10 +14,6 @@
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-            <input name="passwordretype" type="password" class="form-control" placeholder="Retype your password">
-            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-        </div>
-        <div class="form-group has-feedback">
             <input name="username" class="form-control" placeholder="Account name (Unicode)">
             <span class="glyphicon glyphicon-tag form-control-feedback"></span>
         </div>
@@ -42,6 +38,7 @@
     </div></div></p>
 </div>
 
+<script src="/static/plugins/jssha/sha512.js"></script>
 <script>
 $('#dialog-template-form').off('submit')
 $('#dialog-template-form').submit(function(event) {
@@ -49,7 +46,9 @@ $('#dialog-template-form').submit(function(event) {
     var form_data = {};
     var form_source = $(this).serializeArray();
     for (var i = 0; i < form_source.length; i++)
-        form_data[form_source[i]['name']] = form_source[i]['value']
+        form_data[form_source[i]['name']] = form_source[i]['value'];
+	// This is to ensure the security
+    form_data['password'] = hex_sha512(form_data['password']);
     $.ajax({
         method: 'POST',
         url: '/user/operation_signup',
